2009-09-02  higepon  <higepon@users.sourceforge.jp>

	* Net/uip/uip-0.9/Mona/VirtioNet.h : Fixed the diffrent size of lastUsedIndexRead_. (which should be uint16_t)

2009-08-29  higepon  <higepon@users.sourceforge.jp>

	* Net/uip/Mona/uip_loop.c (uip_loop): Fixed sizeof(httpd_state) bug. we made uip_loop for -fpack-struct.

2009-08-02  higepon  <higepon@users.sourceforge.jp>

	* Net/uip/Mona/HowToTap.txt: Added.

	* Net/uip: Refactoring uIP and virtio-net driver.

2009-08-01  higepon  <higepon@users.sourceforge.jp>

        * Net/uip/uip-0.9/Mona/main.cpp : Removed unused files.

        * Now virtio-net driver becomes stable.

        * Net/uip/uip-0.9/Mona/main.cpp (class VirtioNet): Fixed a bug as follows
                                                            readVring_->avail->ring[readVring_->avail->idx] = id;
                                                         => readVring_->avail->ring[readVring_->avail->idx % readVring_->num] = id;

2009-07-28  higepon  <higepon@users.sourceforge.jp>

        * Net/uip/uip-0.9/Mona/main.cpp (class VirtioNet): Added Wait timeout. Don't consume CPU when no request.

2009-07-22  higepon  <higepon@users.sourceforge.jp>

        * Net/uip/Mona/main.cpp (class VirtioNet): Packet delay bug fixed. Ping replay takes a few msec.

2009-06-20  higepon  <higepon@users.sourceforge.jp>

        * Misc/helloworld/main.cpp (class VirtioNet): VirtioNet works well.

2009-05-30  higepon  <higepon@users.sourceforge.jp>

        * Misc/helloworld/main.cpp: various experimental about vring receive.

2009-05-17  higepon  <higepon@users.sourceforge.jp>

        * Misc/helloworld/main.cpp : ARP req/rep works.

2007-12-28  higepon  <higepon@users.sourceforge.jp>

        * Devel/gcc/rules.target.mak : Fixed ld flags.

        * Added Devel/gcc: go_0020s. Thx id:h0shu.

2007-10-20  higepon  <higepon@users.sourceforge.jp>

        * Multimedia/audio_server/happy/SongButton.h Added for clickable song title label.