@@ -1,0 +1,28 @@
+<html>
+<head>
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+</head>
+<body bgcolor="white">
+<center>
+<table width="600" border="0"><tr><td>
+<h2>Welcome</h2>
+<img src="img/logo.jpg">
+<p align="justify">These web pages are served by uIP web server running on <a href="http://www.monaos.org/">Mona OS</a>.
+<a href="http://www.monaos.org/">Mona OS</a> uses QEMU(KVM) virtio-net driver.</p>
+
+<p align="justify">
+Click on the links above to see some status information about the web
+server and the TCP/IP stack.
+</p>
+<hr>
+<p align="justify">
+このページは <a href="http://www.monaos.org/">Mona OS</a>上で動く uIP という Web サーバーによって提供されています。
+ネットワークの機能は<a href="http://www.monaos.org/">Mona OS</a> から QEMU(KVM)の virtio を利用しています。</p>
+<p align="justify">
+上のリンク先では Web サーバーや TCP/IP スタックの統計情報を見ることができます。
+</p>
+</td></tr></table>
+</center>
+
+</body>
+</html>
